<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:id="@+id/tableLayout"
    android:padding="5dp"
    android:stretchColumns="*">


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/queryEditText"
            android:layout_span='3'
            android:hint="@string/queryPrompt"
            android:layout_gravity="center_horizontal"/>

    </TableRow>

    <TableRow
        android:layout_width ="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tagEditText"
            android:hint="@string/tagPrompt"
            android:imeOptions="actionDone"
            android:layout_gravity="center_vertical">
        </EditText>
        <Button
            android:id="@+id/saveButton"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_span="2"
            android:layout_gravity="center_vertical"
            android:text="@string/save">

        </Button>
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/light_orange">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/taggedSearchesTextView"
            android:text="@string/taggedSearches"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_span="3">
        </TextView>
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/tableRow3">
            <ScrollView
                android:id="@+id/queryScrollView"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_span="3"
                android:padding="5dp">
                <TableLayout
                    android:id="@+id/queryTableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:stretchColumns="*">
                </TableLayout>
            </ScrollView>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/clearTags"
            android:id="@+id/clearTagsButton"
            android:layout_span="3"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal">
        </Button>
    </TableRow>
</TableLayout>